# monopoly-ribo

./: LICENSE  README.md  pyproject.toml
src/monopolyribo/: __init__.py  api.py  classification.py  contrasts.py  dataset.py  datasets.py  design.py  exceptions.py  filtering.py  io.py  normalization.py  plotting.py  results.py  stats.py  validation.py
src/monopolyribo/engines/: __init__.py  base.py  beta_binomial.py  dirichlet_multinomial.py  joint_bayes.py  joint_latent.py  nb_interaction.py
src/monopolyribo/robustness/: __init__.py  jackknife.py  sensitivity.py
src/monopolyribo/statistics/: __init__.py  allocation.py  likelihoods.py  multiple_testing.py
tests/: test_acceptance.py  test_condition_orientation.py  test_nb_interaction_design.py  test_regressions.py
