[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'monopoly-ribo'
version = '0.1.0'
readme = 'README.md'
requires-python = '>=3.10'
license = 'MIT'
authors = [
    {name = 'William DeGroat'},
    {name = 'Anat Kreimer'}
]
dependencies = [
    'numpy',
    'pandas',
    'scipy',
    'statsmodels',
    'matplotlib'
]

[project.optional-dependencies]
bayes = [
    'pymc',
    'arviz'
]
dev = [
    'pytest',
    'ruff',
    'mypy'
]

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
markers = [
    'slow: slower statistical calibration tests'
]
testpaths = ['tests']

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'

[tool.ruff.lint]
select = ['E', 'F', 'I']
